@@ -1,5 +1,6 @@
 2020-11-10 (12.20)
 	ANDROID: change path label when displaying project folder
+	COMMON: ensure INT datatype is always 64 bits
 
 2020-11-01 (12.20)
 	CONSOLE: give error when file not found
